# exploring-boto3-events-with-mitmproxy

./: .gitignore  .tool-versions  LICENSE  Makefile  README.md  devenv.nix  pyproject.toml
asciinema/: tmux-2022-09-04--2105.cast  tmux-2022-09-04--2106.cast  tmux-2022-09-04--2130.cast  tmux-2022-09-04--2214.cast  tmux-2022-09-04--2239.cast
examples/: basic_event_logging.py  callback.py  event_wildcards.py  http_get.py  intercepting.py  mitm_interception.py  needs_retry_event.py  outputs.md  print_events.py  retry_metrics.py  s3_get_object.py  simple_event.py
images/: containers.plantuml  dag.plantuml  http-proxy.plantuml  https.plantuml  mitm-trusted.plantuml  mitm.excalidraw  mitm.plantuml  qr-code-config.json
outputs/: basic_event_logging.cast  basic_event_logging.output.txt  callback.cast  callback.output.txt  event_wildcards.cast  event_wildcards.output.txt  intercepting.cast  intercepting.output.txt  needs_retry_event.cast  needs_retry_event.output.txt  print_events.cast  print_events.output.txt  retry_metrics.cast
slides/: exploring-boto3-events-with-mitmproxy.md  fourTheorem.dstheme
slides/exploring-boto3-events-with-mitmproxy.iapresenter/: info.json  text.md
