[tool.poetry]
name = "exploring-boto3-events-with-mitmproxy"
version = "0.1.0"
description = ""
authors = ["Michael Twomey <mick@twomeylee.name>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.24.66"
mitmproxy = "^8.1.1"
rich = "^12.5.1"
asciinema = "^2.2.0"
cffi = "^1.15.1"
segno = "^1.5.2"

[tool.poetry.dev-dependencies]
mypy = "^0.971"
black = "^22.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
